sourcecode is compiling

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
         cmake {
             path "CMakeLists.txt"
         }
-    Androidndk = 20.1.5948944
+        android.ndkVersion  = "20.1.5948944"
     }
     productFlavors {
     }
