--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,18 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha03'
+//        classpath 'com.android.tools.build:gradle:3.5.2'
+//        classpath 'com.android.tools.build:gradle:3.5.0-alpha03'
 
 
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.android.tools.build:gradle:7.1.3'
     }
 }
 
@@ -33,6 +35,7 @@ allprojects {
         }
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
